--- a/style.css
+++ b/style.css
@@ -19,6 +19,11 @@ img{
     max-width: 100%;
 }
 
+h2{
+    text-align: center;
+    margin-bottom: 20px;
+}
+
 .slider1{
     background-image: url(/images/llamas\ purpuras.png);
     position: relative;
@@ -62,20 +67,15 @@ img{
 
    
 }
+
 .nav-lista, .nav-form{
     flex-grow: 1;
 }
 
 .nav-lista{
     display: flex;
-    /* justify-content: space-around; */
-    /* margin: auto; */
     list-style: none;   
 }
-
-/* .nav-lista_item{
-    max-width: 1000px;
-} */
 
 .nav-lista_item-link{
     display: block;
@@ -91,6 +91,7 @@ img{
     transform: scale(1.1);
     background-color:rgb(38, 104, 226);
 }
+
 .nav-form{
     display: flex;
     justify-content: flex-end;
@@ -102,7 +103,6 @@ img{
     text-align: center;
     margin-bottom: 15px;
 }
-
 
 .footer{
     display: grid;
@@ -147,11 +147,28 @@ img{
     max-width: 25px;
 }
 
+.catalogo{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    padding-left: 65px;
+    padding-right: 35px;
+}
 
 
-@media (max-width: 800px) {
-    body {
-        background-color: plum;
+
+@media (max-width: 900px) {
+    .nav {
+       flex-wrap: wrap;
+    }
+
+    .nav-lista_item-link{
+        border-right: none;
+        border: 1px solid var(--negro);
+    }
+
+    .footer{
+        font-size: 90%;
     }
 }
 
@@ -163,36 +180,49 @@ img{
         width: 100%;
         max-width: 767px;
     }
+
     .logo{
         margin-top: 30px; 
         display: flex;
+        height: 130px;
     }
 
     .nav{
         flex-wrap: wrap;
     }
+
     .nav-lista{
         display: block;
         font-size: 70%;
     }
+
     .nav-lista_item-link{
         border-bottom: 1px solid var(--negro);
     }
+
     .nav-form{
         display: block;
+        align-content: center;
     }
 
     .footer{
-        font-size: 70%;
+        font-size: 90%;
         display: block;
+
     }
+
     .footer-copy{
         border-bottom: 1px solid var(--negro);
         border-right: none;
+        margin-bottom: 10px;
+        padding-bottom: 5px;
     }
+
     .footer-redes{
         border-bottom: 1px solid var(--negro);
         border-right: none;
+        margin-bottom: 10px;
+        padding-bottom: 5px;
     }
 
 }    
