--- a/style.css
+++ b/style.css
@@ -19,13 +19,20 @@ img{
     max-width: 100%;
 }
 
+h1{
+    text-align: center;
+    margin-bottom: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 h2{
     text-align: center;
     margin-bottom: 20px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .slider1{
-    background-image: url(/images/llamas\ purpuras.png);
+    background-image: url(/images/llamas-purpuras.jpg);
     position: relative;
     height: 300px;
     width: 100%;
@@ -62,10 +69,7 @@ h2{
     background-color: rgba(117, 117, 253, 0.692);
     display: flex;
     padding: 8px;
-
     margin-bottom: 20px;
-
-   
 }
 
 .nav-lista, .nav-form{
@@ -76,14 +80,19 @@ h2{
     display: flex;
     list-style: none;   
 }
+.nav-lista_item{
+    flex-grow: 1;
+}
 
 .nav-lista_item-link{
     display: block;
     padding: 5px 23px;
     border-right: 1px solid var(--negro);
     text-decoration: none;
+    text-align: center;
     font-weight: bold;
     color: white;
+    font-size: 18px;
 }
 
 .nav-lista_item-link:hover{
@@ -92,17 +101,23 @@ h2{
     background-color:rgb(38, 104, 226);
 }
 
-.nav-form{
+/* .nav-form{
     display: flex;
     justify-content: flex-end;
-}
+    position: relative;
+    top: 260px;
+    right: 20px;
+    height: 30px;
+} */
 
-/* -------------------slider de imágenes------------------- */
+/* ---------------------Slider de imágenes------------------- */
 
 .slider2{
     text-align: center;
     margin-bottom: 15px;
 }
+
+/* ---------------------------Footer------------------------- */
 
 .footer{
     display: grid;
@@ -124,7 +139,7 @@ h2{
     border-right: 1px solid var(--negro);
 }
 
-/* -----------Página de contacto--------------- */
+/* ----------------------Página de contacto---------------------- */
 
 .contact{
     margin-left: 40px;
@@ -147,12 +162,18 @@ h2{
     max-width: 25px;
 }
 
+/* ----------------------Página de catálogo----------------------- */
+
 .catalogo{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-    padding-left: 65px;
-    padding-right: 35px;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 5px;
+    margin: 20px;
+}
+.catalogo-elemento{
+    display: flex;
+    padding: 20px;
+    flex-direction: column;
 }
 
 
@@ -223,6 +244,12 @@ h2{
         border-right: none;
         margin-bottom: 10px;
         padding-bottom: 5px;
+    }
+
+    .catalogo{
+        grid-template-columns: repeat(2, 1fr);
+        gap: 3px;
+        margin: 10px;
     }
 
 }    
