--- a/style.css
+++ b/style.css
@@ -43,18 +43,18 @@ h2{
 
  .cabecera{
     display: flex;
-    justify-content: center; 
-} 
+    justify-content: center;
+}
 
 .logo{
     align-items: center;
-    margin-top: 50px; 
+    margin-top: 50px;
     border-radius: 30px;
 }
 
 .slider1{
     display: flex;
-    justify-content: center;   
+    justify-content: center;
     position: relative;
 }
 
@@ -86,14 +86,14 @@ h2{
 
 .nav-lista{
     display: flex;
-    list-style: none;  
+    list-style: none;
 }
 .nav-lista_item{
     flex-grow: 1;
 }
 
 .nav-lista_item:last-child a{
-    border-right: none; 
+    border-right: none;
 }
 
 .nav-lista_item-link{
@@ -153,20 +153,63 @@ h2{
 
 /* ----------------------Página de contacto---------------------- */
 
-.contact{
-    margin-left: 40px;
+.contacto{
+    padding: 1em;
+    display: grid;
+    grid-template-columns: 700px 1fr;
 }
-.contact_nav{
-    padding: 20px;
+.contacto_form{
+    background-color: rgb(32, 28, 32);
+    color: white;
+    margin-bottom: 20px;
 }
-.contact_nav-lista{
+.contacto_form form{
+    padding: 1em;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 15px;
+}
+.contacto_form form .block{
+    grid-column: 1 / 3;
+}
+.contacto_form form button{
+    color: white;
+    background-color:rgba(117, 117, 253, 0.692);
+    width: 100%;
+    padding: 15px;
+    text-transform: uppercase;
+}
+.contacto_form form button:hover,
+.contacto_form form button:focus{
+    background-color: rgb(38, 104, 226);
+    color: black;
+}
+
+.contacto_form form input,
+.contacto_form form textarea
+{
+    width: 100%;
+    padding: 10px;
+    border: none;
+    background: none;
+    border-bottom: 1px solid rgba(117, 117, 253, 0.692);
+    color: white;
+}
+
+.info{
+    /* text-align: center; */
+}
+
+.info_lista{
     list-style: none;
+    margin-left: 20px;
+    padding: 10px;
 }
-.contact_nav-lista_item{
+.info_lista-item{
     margin-bottom: 10px;
     color: white;
 }
-.contact_nav-lista_item-link{
+.info_lista-item_link{
     margin-left: 8px;
     color: var(--negro);
 }
@@ -230,11 +273,11 @@ h2{
 /*@media (max-width: 900px) {
      .nav {
        flex-wrap: wrap;
-    } 
+    }
 
     .nav-lista_item-link{
          border-right: none;
-        border: 1px solid var(--negro); 
+        border: 1px solid var(--negro);
     }
 
     .footer{
@@ -244,7 +287,7 @@ h2{
 
 /*------------------- media query solo para celulares------------------ */
 @media (max-width: 900px) {
-    
+
     .slider1{
         height: 200px;
         width: 100%;
@@ -252,7 +295,7 @@ h2{
     }
 
     .logo{
-        margin-top: 30px; 
+        margin-top: 30px;
         display: flex;
         height: 130px;
     }
@@ -279,6 +322,7 @@ h2{
         display: block;
         max-height: 40px;
         flex-direction: row-reverse;
+        border-radius: 20px;
     }
 
     .menu-hamburguesa:hover{
@@ -294,13 +338,14 @@ h2{
     }
 
     .nav-lista_item:last-child a{
-        border-right: 1px solid var(--negro); 
+        border-right: 1px solid var(--negro);
     }
 
     .nav-lista_item-link{
-        /* border-bottom: 1px solid var(--negro); */
         border-right: none;
-        border: 1px solid var(--negro);
+        border: 2px solid var(--negro);
+        margin-bottom: 6px;
+        border-radius: 20px;
     }
 
     .nav-form{
@@ -339,9 +384,20 @@ h2{
         display: block;
     }
 
-}    
+    .contacto{
+        display: block;
+    }
+
+    .info_lista-item{
+       display: block;
+    }
+    .info h2{
+        text-align: left;
+    }
+
+}
 
 
 @media (max-width: 400px) {
-           
+
 }
